tests/ui/error-codes/E0092.rs
#![feature(intrinsics)]
extern "rust-intrinsic" {
    fn atomic_foo(); //~ ERROR E0092
}

fn main() {
}
